# aoc2024

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
include/: aoc2024.hpp
py_src/: day1.py  lib.py
scripts/: gen.sh
src/: aoc2024_1.cpp  aoc2024_10.cpp  aoc2024_11.cpp  aoc2024_12.cpp  aoc2024_13.cpp  aoc2024_14.cpp  aoc2024_15.cpp  aoc2024_16.cpp  aoc2024_17.cpp  aoc2024_18.cpp  aoc2024_19.cpp  aoc2024_2.cpp  aoc2024_20.cpp  aoc2024_21.cpp  aoc2024_22.cpp  aoc2024_23.cpp  aoc2024_24.cpp  aoc2024_25.cpp  aoc2024_26.cpp  aoc2024_27.cpp  aoc2024_28.cpp  aoc2024_29.cpp  aoc2024_3.cpp  aoc2024_30.cpp  aoc2024_31.cpp  aoc2024_4.cpp  aoc2024_5.cpp  aoc2024_6.cpp  aoc2024_7.cpp  aoc2024_8.cpp  aoc2024_9.cpp
